Fixed the alignment on the logo and search box on screen resize

--- a/client/src/StyleSheet/MobileNavBar.css
+++ b/client/src/StyleSheet/MobileNavBar.css
@@ -1,6 +1,7 @@
 .Logo__container > img {
   width: 50vw;
-  margin-left: 100px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media only screen and (max-width: 784px) {
